--- a/doc/manual_old.tex
+++ b/doc/manual_old.tex
@@ -7,7 +7,7 @@
 %%
 %F  gapmacro . . . . . . . . . . . . . . . . . read the GAP macro package
 %%
-\input ../../gapmacro
+\input ../../../doc/gapmacro
 \Package{AutPGrp}
 %
 %
@@ -22,8 +22,8 @@
 %%
 %F  UseReferences . . . . . . . . . . . . . . . . . .  specify references
 %%
-\UseReferences{../../doc/ext}
-\UseReferences{../../doc/ref}
+\UseReferences{../../../doc/ext}
+\UseReferences{../../../doc/ref}
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
