--- a/doc/underl.tex
+++ b/doc/underl.tex
@@ -3,7 +3,7 @@
 %A  underl.tex         AutPGrp documentation                 Bettina Eick
 %A                                                         Eamonn O'Brien
 %%
-%H  @(#)$Id: underl.tex,v 1.2 2002/11/27 07:27:27 gap Exp $
+%H  @(#)$Id: underl.tex,v 1.3 2004/10/01 10:20:06 gap Exp $
 %%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -97,5 +97,28 @@ rec( glAutos := [  ],
 gap> ConvertHybridAutGroup( A );
 <group of size 52488 with 11 generators>
 \endexample 
+
+Let <A> be the automorphism group of a $p$-group $G$ as computed by 
+`AutomorphismGroupPGroup'. Then the following function can compute 
+a pc group isomorphic to the solvable part of <A> stored in the record 
+component <A>.agGroup. This solvable part forms a subgroup of the
+automorphism group which  contains at least the automorphisms centralizing
+the Frattini factor of $G$. The pc group facilitates various further
+computations with <A>.
+
+\> PcGroupAutPGroup( <A> ) F
+
+computes a pc presentation for the solvable part of the automorphism
+group <A> defined by <A>.agGroup. <A> is the output of the function
+`AutomorphismGroupPGroup'.
+
+\beginexample
+gap> H := SmallGroup (729, 34);;
+gap> A := AutomorphismGroupPGroup(H);;
+gap> B := PcGroupAutPGroup( A );
+<pc group of size 52488 with 11 generators>
+gap> I := InnerAutGroupPGroup( B );
+Group([ f5, f4^2*f8, f6^2*f9^2, f11^2, f10^2, <identity> of ... ])
+\endexample
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
