doc: tweak title page

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -30,8 +30,7 @@
   \centerline{\titlefont ---}\medskip
   \centerline{\titlefont A GAP4 Package}\vfill
   \centerline{\secfont by}\vfill
-  \centerline{\secfont Bettina Eick and Eamonn O'Brien}\vfill
-  \centerline{\secfont{\Month} \Year}
+  \centerline{\secfont Bettina Eick and Eamonn O'Brien}
 }
 %
 %
