--- a/doc/method.tex
+++ b/doc/method.tex
@@ -57,9 +57,7 @@ that the method also accepts permutation groups as input, provided
 they satisfy the required filters.
 
 \beginexample 
-gap> G := DihedralGroup( IsPermGroup, 2^5 );
-Group([ ( 1, 2, 3, 4, 5, 6, 7, 8, 9,10,11,12,13,14,15,16), 
-  ( 2,16)( 3,15)( 4,14)( 5,13)( 6,12)( 7,11)( 8,10) ])
+gap> G := DihedralGroup( IsPermGroup, 2^5 );;
 gap> IsPGroup(G);
 true
 gap> CanEasilyComputePcgs(G);
