--- a/README
+++ b/README
@@ -68,8 +68,8 @@ e-mail: obrien@math.auckland.ac.nz
                      Installing the AutPGrp package
                      ------------------------------
 
-To install the AutPGrp package, move the archive file 'autpgrp.zoo'  or
-'autpgrp.tar.gz' into the `pkg' directory in which you plan to install 
+To install the AutPGrp package, move the archive file 'autpgrp.tar.gz'
+into the `pkg' directory in which you plan to install
 AutPGrp.  Usually,  this will  be the directory `pkg' in the hierarchy of 
 your version  of  GAP 4. (However, it is also possible to keep an additional
 `pkg'  directory  in your private directories, see section "ref:Installing  
